<resources>
    <string name="app_name">Career Compass</string>
    <string name="action_settings">Settings</string>
    <string name="action_print">Print</string>
    <string name="print">Print</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="previous">Previous</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="default_web_client_id" translatable="false">279857990557-ihe2je4g2s34sigm3m7lqfl7p41jr6fs.apps.googleusercontent.com</string>
    <string name="drop_here_to_share">Drop here to Share</string>
    <string name="recent">Recent</string>
    <string name="sorted_by_time_edited">Sorted by time edited</string>
    <string name="no_recent_cvs">No recently worked on CVs</string>
    <string name="ai_mode">AI Mode</string>
    <string name="step_by_step_demo">Step by Step (Demo)</string>
    <string name="import_career_compass">Import (.careercompass)</string>
    <string name="new_cv">New CV</string>
    <string name="settings_title">Settings</string>
    <string name="guest_user">Guest User</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="general_preferences">GENERAL PREFERENCES</string>
    <string name="language">Language</string>
    <string name="select_language">Select your language</string>
    <string name="english_us">English US</string>
    <string name="lang_system">System Default</string>
    <string name="theme">Theme</string>
    <string name="switch_dark_mode">Switch to dark mode</string>
    <string name="theme_system">System Default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="membership">MEMBERSHIP</string>
    <string name="subscription">Subscription</string>
    <string name="not_active">Not active</string>
    <string name="application">APPLICATION</string>
    <string name="about">About</string>
    <string name="version_text">Version 2.4.0</string>
    <string name="log_out">LOG OUT</string>
    <string name="log_in">LOG IN</string>
    <string name="ai_assistant">AI Assistant</string>
    <string name="ai_data_input">AI Data Input</string>
    <string name="ai_data_desc">Paste your JSON or Smart Text here. The app will use this to populate your CV.</string>
    <string name="copy_master_prompt">Copy Master Prompt</string>
    <string name="resume_data_hint">Resume Data</string>
    <string name="paste_btn">Paste</string>
    <string name="clear_btn">Clear</string>
    <string name="next_choose_template">Next: Choose Template</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="choose_template">Choose Template</string>
    <string name="select_template_first">Please select a template first</string>
    <string name="select_purpose_first">Please select a purpose first</string>
    <string name="manage_sections">Manage Sections</string>
    <string name="editor">Editor</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="close">Close</string>
    <string name="add_section_title">Select Section to Add</string>
    <string name="search_sections_hint">Search sections...</string>
    <string name="sort_az">A-Z</string>
    <string name="sort_most_used">Most Used</string>
    <string name="sort_recent">Recent</string>
    <string name="group_sections">Grouped</string>
    <string name="reset_resume_data">Reset Resume Data</string>
    <string name="placeholder_name">Your Name</string>
    <string name="placeholder_address">City, Country</string>
    <string name="placeholder_profession">Professional Title</string>
    <string name="placeholder_declaration">I hereby certify that the information provided above is true and correct to the best of my knowledge and belief.</string>
    <string name="add_item">+ Add Item</string>
    <string name="pick_image">Pick Image</string>
    <string name="error_picking_image">Error picking image</string>
    <string name="login_to_career_compass">Login to Career Compass</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="signup_with_google">Signup with Google</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="join_career_compass">Join Career Compass</string>
    <string name="full_name_hint">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="lang_english">English US</string>
    <string name="lang_bangla">বাংলা</string>
    <string name="field_name">Full Name</string>
    <string name="your_name">Your Name</string>
    <string name="professional_title">Professional Title</string>
    <string name="field_profile_pic">Profile Picture</string>
    <string name="field_email">Email</string>
    <string name="field_phone">Phone</string>
    <string name="field_address">Address</string>
    <string name="field_linkedin">LinkedIn</string>
    <string name="field_github">GitHub</string>
    <string name="field_portfolio">Portfolio</string>
    <string name="field_facebook">Facebook</string>
    <string name="field_website">Website/Link</string>
    <string name="field_nationality">Nationality</string>
    <string name="field_dob">Date of Birth</string>
    <string name="field_gender">Gender</string>
    <string name="field_ms">Marital Status</string>
    <string name="field_height">Height</string>
    <string name="field_pno">Passport No.</string>
    <string name="field_issued">Issued By</string>
    <string name="field_idate">Issue Date</string>
    <string name="field_edate">Expiry Date</string>
    <string name="field_summary">Summary</string>
    <string name="field_inst">Institute/Organization</string>
    <string name="field_year">Year</string>
    <string name="field_board">Board</string>
    <string name="field_deg">Degree</string>
    <string name="field_gpa">GPA/Score</string>
    <string name="field_comp">Company/Organization</string>
    <string name="field_dur">Duration</string>
    <string name="field_role">Role/Position</string>
    <string name="field_desc">Description/Responsibilities</string>
    <string name="field_link">Link/URL</string>
    <string name="field_cat">Category</string>
    <string name="field_vals">Items</string>
    <string name="field_lang">Language</string>
    <string name="field_lvl">Proficiency Level</string>
    <string name="field_title">Title</string>
    <string name="field_body">Body</string>
    <string name="field_org">Organization</string>
    <string name="field_date">Date</string>
    <string name="field_url">URL</string>
    <string name="field_pos">Position</string>
    <string name="field_topic">Topic</string>
    <string name="field_course">Course</string>
    <string name="field_amt">Amount</string>
    <string name="field_test">Test Name</string>
    <string name="na">N/A</string>
    <string name="label_institute">Institute</string>
    <string name="label_year">Year</string>
    <string name="label_board">Board</string>
    <string name="label_degree">Degree</string>
    <string name="label_gpa_prefix">CGPA: </string>
    <string name="label_passport_no">Passport No</string>
    <string name="label_issued_by">Issued By</string>
    <string name="label_issue_date">Issue Date</string>
    <string name="label_expiry_date">Expiry Date</string>
    <string name="field_score">Score</string>
    <string name="field_details">Details</string>
    <string name="field_cert_name">Certification Name</string>
    <string name="field_pub">Journal / Publisher</string>
    <string name="field_father">Father\'s Details</string>
    <string name="field_mother">Mother\'s Details</string>
    <string name="field_siblings">Siblings Details</string>
    <string name="field_pref">Preferences</string>
    <string name="field_habits">Habits</string>
    <string name="field_weight">Weight</string>
    <string name="field_complexion">Complexion</string>
    <string name="field_build">Build</string>
    <string name="field_status">Status</string>
    <string name="field_country">Target Country</string>
    <string name="field_headshot">Headshot</string>
    <string name="field_fullbody">Full Body</string>
    <string name="field_family">Family</string>
    <string name="field_content">Content</string>
    <string name="field_diet">Diet</string>
    <string name="field_smoking">Smoking Habit</string>
    <string name="field_drinking">Drinking Habit</string>
    <string name="field_rashi">Rashi</string>
    <string name="field_nakshatra">Nakshatra</string>
    <string name="field_gotra">Gotra</string>
    <string name="field_eye_color">Eye Color</string>
    <string name="field_hair_color">Hair Color</string>
    <string name="ai_step_1_title">Step 1: Get Your Prompt</string>
    <string name="ai_step_1_desc">Copy this specialized AI prompt to start optimizing your career profile with precision.</string>
    <string name="ai_step_3_title">Step 3: Generate CV</string>
    <string name="ai_step_3_desc">Paste the AI’s content below. Our engine will format it into a professional, high-impact resume template.</string>
    <string name="ai_copy_prompt">Copy Prompt</string>
    <string name="ai_next_step">Next Step</string>
    <string name="i_already_have_the_data">I already have the data</string>
    <string name="ai_generate_cv">Generate Your CV</string>
    <string name="ai_footer_lock">Your data is processed securely and privately.</string>
    <string name="extra_sections_title">Extra Sections</string>
    <string name="extra_sections_subtitle">This template includes sections you don\'t currently have in your CV:</string>
    <string name="extra_sections_question">Would you like to add these as blank sections?</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="getting_started">GETTING STARTED</string>
    <string name="copy_to_clipboard_hint">Clicking will copy the text to your clipboard</string>
    <string name="final_step">FINAL STEP</string>
    <string name="step_3_of_3">3 / 3</string>
    <string name="paste_ai_cv_hint">Paste the AI-generated CV content here...</string>
    <string name="clear">CLEAR</string>
    <string name="paste">PASTE</string>
    <string name="back_to_step_2">Go back to previous step</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="cancel">Cancel</string>
    <string name="pro_feature_only">PRO Feature Only</string>
    <string name="pro_feature_desc">Automatic AI is a premium feature included in the $10 PRO tier. Upgrade now to unlock fully automated CV generation!</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="include_extra_sections">Include Extra Sections</string>
    <string name="include_extra_info">Keep Template\'s Sample Data</string>
    <string name="apply_template">Apply Template</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_warning">Delete Account &amp; Data</string>
    <string name="delete_account_confirm_msg">Are you sure you want to delete your account? This will permanently remove your cloud-synced data. Check the boxes below to specify what data to delete.</string>
    <string name="delete_data_templates">Delete my Template Designs</string>
    <string name="delete_data_shared">Delete my Shared Community Content</string>
    <string name="delete_data_account">Delete my Account Identity &amp; Subscription Tier</string>
    <string name="delete_confirm_checkbox">I understand this action is permanent and cannot be undone.</string>
</resources>